# src/routers/index.ts
@@ -3,6 +3,7 @@ import useUser from "./user";
 import useRole from "./role";
 import useAuth from "./auth";
 import usePermission from "./permission";
+import useFile from "./file";
 const router = Router();
 
 router.get("/", (_req: Request, res: Response) => {
@@ -12,5 +13,6 @@ router.use("/users", useUser);
 router.use("/roles", useRole);
 router.use("/permissions", usePermission);
 router.use("/auth", useAuth);
+router.use("/files", useFile);
 
 export default router;
