# src/types/file.ts
@@ -1,0 +1,11 @@
+export interface Media {
+	id: number;
+	url: string;
+	name: string;
+	size: number;
+	type: string;
+	disk: string;
+	path: string;
+	createdAt: string;
+	updatedAt: string;
+}
